On mobile devices, the width of app was overflowing the screen width. Fixed with changes to NavigatbleContentWrapper and App

--- a/front_end/src/components/NavigatableContentWrapper/NavigatableContentWrapper.scss
+++ b/front_end/src/components/NavigatableContentWrapper/NavigatableContentWrapper.scss
@@ -5,7 +5,6 @@
 	
 	.wrapperContentContainer {
 		display: flex;
-		margin: 1em;
 	}
 	
 	.wrapperContentContainer:not(.smallScreenWidth) {
@@ -32,6 +31,10 @@
 		
 		.navigationBarContainer {
 			margin-bottom: 0.25em;
+		}
+		
+		.mainContentContainer {
+			padding: 1em;
 		}
 	}
 	
